--- a/switchlanguage/app/src/main/res/values-fr/strings.xml
+++ b/switchlanguage/app/src/main/res/values-fr/strings.xml
@@ -1,6 +1,5 @@
-<?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">MulLanguage</string>
-    <string name="setting">réglage</string>
-    <string name="i_am_test_text">Je suis un texte de test</string>
+    <string name="app_name">MulLangage</string>
+    <string name="setting">paramètre</string>
+    <string name="i_am_test_text">je teste le texte</string>
 </resources>
