--- a/switchlanguage/app/src/main/res/values-zh-rTW/strings.xml
+++ b/switchlanguage/app/src/main/res/values-zh-rTW/strings.xml
@@ -1,6 +1,5 @@
-<?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">MulLanguage</string>
-    <string name="setting">設置</string>
+    <string name="app_name">多語言</string>
+    <string name="setting">環境</string>
     <string name="i_am_test_text">我是測試文本</string>
 </resources>
